# Pollster

./: .env.dev  .env.dist  .gitignore  .sourcery.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yml  docker.env  entrypoint.sh  pyproject.toml  todo
config/: asgi.py  celery.py  celery_app.py  settings.py  urls.py  wsgi.py
mysite/: seeder.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_rename_question_question_question_text.py  0003_rename_question_choice_question_text.py
mysite/polls/templates/polls/: base.html  detail.html  index.html  result.html
pollster/: notes  seeder.py  snippets
pollster/accounts/: apps.py  forms.py  urls.py  views.py
pollster/accounts/templates/accounts/: change-password.html  delete.html  edit-poll.html  login.html  polls.html  register.html  (+2 more)
pollster/core/: asgi.py  settings.py  urls.py  wsgi.py
pollster/polls/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
pollster/polls/__pycache__/: models.d.er
pollster/polls/migrations/: 0001_initial.py  0002_choice_created_at_choice_updated_at_poll_created_at_and_more.py  0003_remove_poll_pub_date.py  0004_rename_user_vote_voter_poll_author.py  0005_alter_poll_author.py
pollster/polls/templates/: polls_base.html
pollster/pollster/: settings.py  urls.py  views.py
pollster/static/css/: home.css  style.css
pollster/templates/: base.html  home.html
pollster/templates/admin/: base_site.html
pollster/templates/includes/: navbar.html
(+7 files in other folders)
