[tool.poetry]
name = "0main"
version = "0.1.0"
description = ""
authors = ["mauer9 <75573495+mauer9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.6"}
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
